[package]
name = "powers-rs"
version = "0.1.1"
authors = ["Rogerio Alves"]
edition = "2021"
license = "MIT"
description = "An implementation of the Stochastic Dual Dynamic Programming (SDDP) algorithm in pure Rust, for the hydrothermal dispatch problem."
repository = "https://github.com/rjmalves/powers"
keywords = ["stochastic", "linear", "optimization", "hydrothermal", "SDDP"]

[[bin]]
name = "powers"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
csv = "1.3.1"
highs-sys = "1.6.4"
rand = "0.9.0"
rand_distr = "0.5.1"
rand_xoshiro = "0.7.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
